# readme-compiler

./: .README.source.md  .gitignore  Makefile  README.md  setup.cfg  setup.py
.githooks/hooks/: pre-commit
.readme/: .footer
.readme.source/: .footer  .logo
hooks/: pre-commit
scripts/: breakdown_repos.py
src/readme_compiler/: __init__.py  __main__.py  bin.py  classes.py  django_setup.py  exceptions.py  fetchers.py  filters.py  format.py  log.py  settings.py  stdout.py  templatetags.py
src/readme_compiler/classes/: __init__.py  cwd.py  io.py  properties.py  repopath.py  transformers.py
src/readme_compiler/describe/: __init__.py  _mapper.py  annotation.py  attribute.py  cls.py  exceptions.py  format.py  function.py  json_elements.py  module.py  object.py  parameter.py
test/: console.py  render_test_repo.py  test_format.py
test/test_repo/: .README.source.md  .readme.templates  README.md  setup.cfg  setup.py
test/test_repo/.readme/: test.md
test/test_repo/.readme.source/: test.md
test/test_repo/src/test_repo/: .README.metadata.json  __init__.py  submodule_1.py  submodule_2.py
test/test_repo/src/test_repo/.readme.source/: cls.test_repo.MyClass.metadata.json  module.test_repo.submodule_1.metadata.json  module.test_repo.submodule_2.metadata.json
test/test_repo/src/test_repo/submodule_3/: .README.metadata.json  .README.source.md  classes.py
test/test_repo/src/test_repo/submodule_3/.readme.source/: cls.test_repo.submodule_3.classes.MySubModule3Class.metadata.json  module.test_repo.submodule_3.classes.metadata.json
(+2 files in other folders)
