[metadata]
name = readme_compiler
author = Denny Wong
author_email = denny.wong@denwong.com
version = 0.0.1
url = https://github.com/denwong47/
description = 

[options]
python_requires = >= 3.8
package_dir=
    =src
include_package_data = True
packages = find:

install_requires =
    django>=4.0.0
    wheel

[options.packages.find]
where=./src

[options.package_data]
* = data/*.*