[metadata]
name = test_repo
author = Denny Wong
author_email = denny.wong@denwong.com
version = 0.0.1
url = https://github.com/denwong47/
description = Repository for testing readme_compiler.

[options]
python_requires = >= 3.8
package_dir=
    =src
include_package_data = True
packages = find:

install_requires =
    wheel

[options.packages.find]
where=./src

[options.package_data]
* = data/*.*